tests/transform/replace/replace_metadata_1/sample/output.txt
main.c:4:37: error: replacement metadata for parameter already set
#pragma spf metadata replace(bar(X, X))
                                    ^
1 error generated.
Error while processing main.c.
